--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="dark">
     <div class="bg-slate-500" id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
